// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderTopWidth renders 0 1`] = `
Array [
  .c0 {
  border-top-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders function 1`] = `
Array [
  .c0 {
  border-top-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-top-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders negative number 1`] = `
Array [
  .c0 {
  border-top-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-top-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-top-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-top-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-top-width: July;
}

@media May {
  .c0 {
    border-top-width: August;
  }
}

@media April {
  .c0 {
    border-top-width: September;
  }
}

@media January {
  .c0 {
    border-top-width: November;
  }
}

@media April {
  .c0 {
    border-top-width: August;
  }
}

@media June {
  .c0 {
    border-top-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: July;
}

@media May {
  .c0 {
    border-top-width: August;
  }
}

@media April {
  .c0 {
    border-top-width: September;
  }
}

@media January {
  .c0 {
    border-top-width: November;
  }
}

@media April {
  .c0 {
    border-top-width: August;
  }
}

@media June {
  .c0 {
    border-top-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-width: November;
  }
}

@media April {
  .c0 {
    border-top-width: January;
  }
}

@media January {
  .c0 {
    border-top-width: December;
  }
}

@media April {
  .c0 {
    border-top-width: April;
  }
}

@media June {
  .c0 {
    border-top-width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-width: November;
  }
}

@media April {
  .c0 {
    border-top-width: January;
  }
}

@media January {
  .c0 {
    border-top-width: December;
  }
}

@media April {
  .c0 {
    border-top-width: April;
  }
}

@media June {
  .c0 {
    border-top-width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-top-width: July;
  }
}

@media April {
  .c0 {
    border-top-width: August;
  }
}

@media January {
  .c0 {
    border-top-width: September;
  }
}

@media April {
  .c0 {
    border-top-width: November;
  }
}

@media June {
  .c0 {
    border-top-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-top-width: July;
  }
}

@media April {
  .c0 {
    border-top-width: August;
  }
}

@media January {
  .c0 {
    border-top-width: September;
  }
}

@media April {
  .c0 {
    border-top-width: November;
  }
}

@media June {
  .c0 {
    border-top-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-width: January;
  }
}

@media April {
  .c0 {
    border-top-width: December;
  }
}

@media January {
  .c0 {
    border-top-width: April;
  }
}

@media April {
  .c0 {
    border-top-width: May;
  }
}

@media June {
  .c0 {
    border-top-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-width: January;
  }
}

@media April {
  .c0 {
    border-top-width: December;
  }
}

@media January {
  .c0 {
    border-top-width: April;
  }
}

@media April {
  .c0 {
    border-top-width: May;
  }
}

@media June {
  .c0 {
    border-top-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-top-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders string 1`] = `
Array [
  .c0 {
  border-top-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopWidth renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderTopWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-top-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
